--- a/src/Modules/Input/textInput.module.css
+++ b/src/Modules/Input/textInput.module.css
@@ -8,7 +8,7 @@
     width: 100%;
     padding: 10px;
     border: none;
-    border-bottom: 1px solid #ccc;
+    border-bottom: 1px solid #BDBDBD;
     outline: none;
   }
   label {
