--- a/src/Modules/Button/primaryBtn.module.css
+++ b/src/Modules/Button/primaryBtn.module.css
@@ -1,20 +1,20 @@
-.btn{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height:  40px;
-    width: 150px;
-    padding: 10px 15px;
-    gap: 10px;
-    border-radius: 16px;
-    background: #FF682F;
-    color: white;
-    border: none;
-    cursor: pointer;
-    font-weight: 400;
-    font-size: 22.047px;
+.btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 40px;
+  width: 150px;
+  padding: 10px 15px;
+  gap: 10px;
+  border-radius: 16px;
+  background: #ff682f;
+  color: white;
+  border: none;
+  cursor: pointer;
+  font-weight: 400;
+  font-size: 22.047px;
 }
 
-.btn:hover{
-    background: #d25325;
+.btn:hover {
+  background: #d25325;
 }
