--- a/src/Modules/ChatRoomMain/chatRoomMain.module.css
+++ b/src/Modules/ChatRoomMain/chatRoomMain.module.css
@@ -3,6 +3,7 @@
   display: flex;
   flex-direction: column;
   height: 50vh;
+  z-index: 0;
 }
 
 .top {
@@ -14,6 +15,9 @@
   flex-direction: row;
   align-items: flex-start;
   justify-content: space-between;
+  background-color: white;
+  z-index: 1;
+  position: relative;
 }
 
 .topLogoname {
