--- a/src/Modules/Input/textInput.module.css
+++ b/src/Modules/Input/textInput.module.css
@@ -1,29 +1,28 @@
-  .inputContainer {
-    width: 30%;
-    position: relative;
-    margin-bottom: 20px;
-  }
-  
-  input {
-    width: 100%;
-    padding: 10px;
-    border: none;
-    border-bottom: 1px solid #BDBDBD;
-    outline: none;
-  }
-  label {
-    position: absolute;
-    left: 10px;
-    top: 50%;
-    transform: translateY(-50%);
-    pointer-events: none;
-    transition: 0.3s ease all;
-    color: #aaa;
-  }
-  
-  .focused label {
-    top: 0;
-    font-size: 12px;
-    color: #333;
-  }
-  
+.inputContainer {
+  width: 100%;
+  position: relative;
+  margin-bottom: 20px;
+}
+
+input {
+  width: 100%;
+  padding: 10px;
+  border: none;
+  border-bottom: 1px solid #bdbdbd;
+  outline: none;
+}
+label {
+  position: absolute;
+  left: 10px;
+  top: 50%;
+  transform: translateY(-50%);
+  pointer-events: none;
+  transition: 0.3s ease all;
+  color: #aaa;
+}
+
+.focused label {
+  top: 0;
+  font-size: 12px;
+  color: #333;
+}
