--- a/src/Pages/SignUp/signUp.module.css
+++ b/src/Pages/SignUp/signUp.module.css
@@ -1,4 +1,4 @@
-.signup {
+.signup{
     background: linear-gradient(63deg, #00023F 22.99%, #1733B0 79.05%, #9D95ED 107.01%, #FFF 116.89%);
     width: 100vw;
     height: 100vh;
@@ -7,31 +7,33 @@
     align-items: center;
 }
 
-.signupBoundingbox {
+.signupBoundingbox{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: flex-start;
+    align-items:flex-start   ;
     padding: 20px 25px;
     border-radius: 24px;
     background: #FFF;
-    width: 912px;
+    width: max-content;
     height: 619.28px;
 }
 
-.signupBoundingboxText {
+.signupBoundingboxText{
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
     gap: 32px;
     padding-left: 25px;
+    width: 400px;
+    overflow: hidden;
 }
 
 
-.signupBoundingboxTextInner {
+.signupBoundingboxTextInner{
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
     gap: 8px;
 }
 
@@ -41,21 +43,24 @@ p {
     font-style: normal;
     font-weight: 700;
     line-height: normal;
-
-    span {
+    
+    span{
         color: #1993FF;
     }
 }
 
 .signupButtons {
-    display: inline-flex;
-    justify-content: center;
-    align-items: flex-start;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     gap: 16px;
 }
 
-.signupField {
+.signupField{
     display: flex;
     flex-direction: column;
+    align-items: center;
     gap: 4px;
+    width: 400px;
 }
+
