--- a/src/Pages/Login/login.module.css
+++ b/src/Pages/Login/login.module.css
@@ -15,9 +15,10 @@
 
 .loginBoundingbox {
   display: flex;
-  flex-direction: column;
+  /* flex-direction: column; */
   justify-content: center;
-  align-items: flex-start;
+  align-items: center;
+  gap: 3.5rem;
   padding: 20px 25px;
   border-radius: 24px;
   background: #fff;
@@ -38,6 +39,9 @@
   flex-direction: column;
   align-items: flex-start;
   gap: 8px;
+  h1{
+    font-size: 36px;
+  }
 }
 
 p {
@@ -63,4 +67,14 @@ p {
   display: flex;
   flex-direction: column;
   gap: 4px;
+}
+
+.loginImage{
+ display: flex;
+ justify-content: center;
+ align-items: center;
+ overflow: hidden;
+ height: 610px;
+ width: 500px;
+ border-radius: 15px;
 }
