--- a/src/Modules/ChatRoomList/chatRoomList.module.css
+++ b/src/Modules/ChatRoomList/chatRoomList.module.css
@@ -1,29 +1,27 @@
 /* ChatroomList.module.css */
 .chatroom-list {
-    display: flex;
-    flex-direction: column;
-    width: 20%;
-  }
-  
-  .chatroom {
-    width: 80%;
-    padding: 10px 20px;
-    cursor: pointer;
-    border: none;
-    border-radius: 15px;
-    background-color: transparent;
-    border-bottom: 1px solid #B6CDD5;
-    margin-bottom: 10px; /* Add margin to create a gap */
-  }
-  .chatroom:not(.selected):hover {
-    background-color: #f0f0f0;
-  }
-  
-  .selected {
-    background-color:#1C2E54;
-    color: #ffffff;
-    border: 0px, 0px, 1px, 0px;
-    border-radius: 15px;
-    transform: translateY(-2px);
-  }
-  
+  display: flex;
+  flex-direction: column;
+  width: 75%;
+}
+
+.chatroom {
+  width: 80%;
+  padding: 10px 20px;
+  cursor: pointer;
+  border: none;
+  background-color: transparent;
+  border-bottom: 1px solid #b6cdd5;
+  margin-bottom: 5px;
+}
+.chatroom:not(.selected):hover {
+  background-color: #f0f0f0;
+}
+
+.selected {
+  background-color: #1c2e54;
+  color: #ffffff;
+  border: 0px, 0px, 1px, 0px;
+  border-radius: 8px;
+  transform: translateY(-2px);
+}
