--- a/src/Modules/ChatRoomMain/chatRoomMain.module.css
+++ b/src/Modules/ChatRoomMain/chatRoomMain.module.css
@@ -6,6 +6,32 @@
   z-index: 0;
 }
 
+.back {
+  height: 40px;
+  width: 20vw;
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  padding: 20px;
+}
+
+.list {
+  position: fixed;
+  width: 20vw;
+  height: 80vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 16px;
+  p {
+    margin-left: -26px;
+    font-weight: bold;
+    padding-left: 0;
+    font-size: 18px;
+  }
+}
+
 .top {
   width: 75vw;
   padding: 20px;
@@ -18,6 +44,7 @@
   background-color: white;
   z-index: 1;
   position: relative;
+  overflow: hidden;
 }
 
 .topLogoname {
