Api call added on login page

--- a/src/Pages/Home/Home.module.css
+++ b/src/Pages/Home/Home.module.css
@@ -48,3 +48,19 @@
 .home-container img{
     height: 50%;
 }
+
+
+@media (width<1250px){
+    .home-container{
+        flex-direction:column-reverse;
+    }
+}
+
+@media (width<400px){
+    .home-title{
+        font-size: 24px;
+    }
+    .home-description{
+        font-size: 20px;
+    }
+}
