--- a/src/Modules/ChatRoomMain/chatRoomMain.module.css
+++ b/src/Modules/ChatRoomMain/chatRoomMain.module.css
@@ -74,6 +74,7 @@
 
 .chatRoomContainerInner {
   display: flex;
+  overflow-y: auto;
   flex-direction: column;
   align-items: flex-start;
   gap: 4px;
