--- a/src/Modules/ChatRoomMain/chatRoomMain.module.css
+++ b/src/Modules/ChatRoomMain/chatRoomMain.module.css
@@ -1,24 +1,27 @@
 /* chatRoomMain.module.css */
+
 .chatRoom {
+  flex: 0.8;
+  height: 100%;
   display: flex;
   flex-direction: column;
-  height: 50vh;
-  z-index: 0;
+  justify-content: end;
 }
-
-.back {
+.header {
+  display: flex;
+}
+.headerBack {
   height: 40px;
   width: 20vw;
   position: absolute;
   display: flex;
   justify-content: center;
-  padding: 20px;
+  padding: 20px 20px 20px 0px;
 }
 
 .list {
-  position: fixed;
-  width: 20vw;
-  height: 80vh;
+  flex: 0.2;
+  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -32,7 +35,7 @@
   }
 }
 
-.top {
+.headerTop {
   width: 75vw;
   padding: 20px;
   margin-left: auto;
@@ -42,18 +45,17 @@
   align-items: flex-start;
   justify-content: space-between;
   background-color: white;
-  z-index: 1;
   position: relative;
   overflow: hidden;
 }
 
-.topLogoname {
+.headerTopLogoname {
   font-weight: bolder;
   font-size: 18px;
   text-transform: uppercase;
 }
 
-.topNum {
+.headerTopNum {
   color: #555555;
   font-weight: 700;
   span {
@@ -62,30 +64,20 @@
 }
 
 .chatRoomContainer {
-  width: 75vw;
-  position: absolute;
-  bottom: 140px;
-  right: 20px;
-  display: inline-flex;
-  flex-direction: column;
-  align-items: flex-start;
-  gap: 16px;
-}
-
-.chatRoomContainerInner {
+  margin: 20px;
   display: flex;
   overflow-y: auto;
   flex-direction: column;
-  align-items: flex-start;
   gap: 4px;
-  width: 100%;
 }
 
-.chatRoomContainerInnerMessage {
+.chatRoomContainerMessage {
+  width: 900px;
   margin-bottom: 5px;
+  overflow-wrap: break-word;
 }
 
-.chatRoomContainerInnerMessageSender {
+.chatRoomContainerMessageSender {
   font-weight: bold;
   margin-bottom: 5px;
 }
@@ -93,11 +85,6 @@
 .chatRoomChatbox {
   width: 75vw;
   height: 45px;
-  position: fixed;
-  bottom: 30px;
-  right: 20px;
-  border: 1px;
-  overflow: hidden;
   border-radius: 16px;
   background: #fff;
   box-shadow: -15px 27px 44.6px 0px rgba(182, 205, 213, 0.5);
@@ -109,7 +96,7 @@
 }
 
 .chatRoomChatboxInput {
-  width: calc(99% - 80px);
+  width: 1000px;
   height: 100%;
   margin-bottom: 0;
   border: none;
@@ -117,8 +104,8 @@
   padding: 30px;
   box-sizing: border-box;
   float: left;
+  overflow-wrap: break-word;
 }
-
 .chatRoomChatboxSendbutton {
   width: 40px;
   height: 100%;
@@ -134,4 +121,10 @@
 
 .chatRoomChatboxSendbutton:hover {
   background-color: #ebebeb;
+}
+.bottom {
+  display: flex;
+  width: 100vw;
+  height: 85vh;
+  max-width: 100%;
 }
